--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Sai Lakshmi Mounika</h1>
-      <p>I'm <span class="typed" data-typed-items="Full Stack Developer "></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Full Stack Developer "></span></p>
     </div>
   </section><!-- End Hero -->
 
