--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
           <div class="email">
             <i class="bi bi-envelope"></i>
             <h4>Email:</h4>
-            <p>mounikagandham2627@gmail.com</p>
+            <p> mounikag219@gmail.com</p>
           </div>
 
           <div class="phone">
             <i class="bi bi-phone"></i>
             <h4>Call:</h4>
-            <p>+1 5589 55488 55</p>
+            <p>+1 3312596755</p>
           </div>
 
           <div id="map" class="map"></div>
