--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
       <div class="about-details">
         <div class="about-info">
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-            <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Arlington, Texas</span></li>
+            <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>3312596755</span></li>
+            <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Austin, Texas</span></li>
           </ul>
         </div>
         <div class="about-info">
           <ul>
             <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's</span></li>
-            <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mounikagandham2627@gmail.com</span></li>
+            <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mounikag219@gmail.com</span></li>
           </ul>
         </div>
       </div>
@@ -295,7 +295,7 @@
           <ul>
             <li>Austin, Texas</li>
             <li>(331) 259-6755</li>
-            <li>mounikagandham2627@gmail.com</li>
+            <li>mounikag219@gmail.com</li>
           </ul>
         </div>
 
