--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </p>
       
       <p class="about-cta">
-        Innovation, creativity, and a passion for excellence drive me every day. Let's connect and create something amazing together!
+        Innovation, creativity, and a passion for excellence drive me every day. Let's connect and create something amazing together!!!
       </p>
     </div>
   </div>
